--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" media="all and (min-width:961px)" type="text/css" href="https://cdn.greeninvoice.co.il/assets/web-app/2.3.53/components/webfonts/all.min.css">
     <title>תענוג להפיק</title>
   </head>
   <body>
